--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,7 +180,9 @@ else()
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -w")
 endif()
 
-target_link_libraries(${PROJECT_NAME} libnyquist)
+target_link_libraries(${PROJECT_NAME} libnyquist
+ 	-static-libstdc++      
+	-ldl -lm)
 # GNU, Intel, Clang
 #include(${CMAKE_CXX_COMPILER_ID})
 
