--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,6 +9,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-18.04
+    container: dockcross/linux-x86
     env:
       CMAKE_TOOLCHAIN_FILE: ${{github.workspace}}/cmake/linux-i686.cmake
 
