--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,7 +18,7 @@ jobs:
     -
       name: GCC multilib
       run: |
-        sudo apt-get install -y gcc-multilib g++-multilib ninja-build
+        sudo apt-get install -y build-essential gcc-multilib g++-multilib ninja-build cmake
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
