--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,7 +18,7 @@ jobs:
     -
       name: GCC multilib
       run: |
-        sudo apt-get install gcc-multilib g++-multilib ninja-build
+        sudo apt-get update && sudo apt-get install gcc-multilib g++-multilib ninja-build
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
@@ -51,10 +51,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     -
-      name: GCC multilib
-      run: |
-        sudo apt-get install gcc-multilib g++-multilib ninja-build
-    - name: Create Build Environment
+      name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
       run: cmake -E make_directory ${{github.workspace}}/build
