--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: voice_utils
-        path: ${{github.workspace}}/bin/GNU-5.5.0/Release/voice_utils_amxx_i386.so
+        path: ${{github.workspace}}/bin/Release/Release/voice_utils_amxx_i386.so
   build_windows:
     runs-on: windows-latest
     
@@ -50,7 +50,7 @@ jobs:
       name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
-      run: cmake -E make_directory ${{github.workspace}}/build
+      run: cmake -E make_directory ${{github.workspace}}/build/win32-msvc-xp-static-ipo.cmake
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
@@ -60,7 +60,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake .. -G "Visual Studio 16 2019" -A Win32  -DCMAKE_BUILD_TYPE=Release
+      run: cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=${{github.workspace}}/cmake/linux-i686.cmake
 
     - name: Build
       working-directory: ${{github.workspace}}/build
@@ -72,5 +72,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: voice_utils
-        path: ${{github.workspace}}/bin
+        path: ${{github.workspace}}/bin/Release/Release/voice_utils_amxx.dll
 
