--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   build_linux:
     runs-on: ubuntu-latest
+    container: s1lentq/linux86buildtools:latest
     
     env:
       CMAKE_TOOLCHAIN_FILE: ${{github.workspace}}/cmake/linux-i686.cmake
