--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,14 +160,17 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/dep/rnnoise")
 if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC") 
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
     set( CMAKE_SHARED_LINKER_FLAGS "/EXPORT:GiveFnptrsToDll=_GiveFnptrsToDll@8" )
+
+	target_link_libraries(${PROJECT_NAME} libnyquist soxr rnnoise)
 else()
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fpermissive -w")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -w")
-endif()
 
-target_link_libraries(${PROJECT_NAME} libnyquist soxr rnnoise
- 	-static-libstdc++      
+	target_link_libraries(${PROJECT_NAME} libnyquist soxr rnnoise
+ 	-static-libstdc++ 
+	-static-intel -no-intel-extensions
 	-ldl -lm)
+endif()
 # GNU, Intel, Clang
 #include(${CMAKE_CXX_COMPILER_ID})
 
