--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,13 +21,11 @@ jobs:
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
       run:  rm -rf build && CC=icc CXX=icpc cmake -B build -DCMAKE_TOOLCHAIN_FILE=cmake/linux-i686.cmake && cmake --build build -j8 
 
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+    - name: Deploy artifacts
+      uses: actions/upload-artifact@v2
       with:
-        files: |
-          ${{github.workspace}}/bin/Release/voice_utils_amxx_i386.so
-          ${{github.workspace}}/scripting
+        name: linux
+        path: ${{github.workspace}}/bin/Release/voice_utils_amxx_i386.so
           
   build_windows:
     runs-on: windows-latest
@@ -56,10 +54,41 @@ jobs:
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build . --config Release --parallel
               
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+    - name: Deploy artifacts
+      uses: actions/upload-artifact@v2
       with:
-        files: |
-          ${{github.workspace}}/bin/Release/Release/voice_utils_amxx.dll
-          ${{github.workspace}}/scripting
+        name: windows
+        path: ${{github.workspace}}/bin/Release/voice_utils_amxx.dll
+  publish:
+    name: 'Publish'
+    runs-on: ubuntu-latest
+    needs: [build_windows, build_linux]  
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2        
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Deploying linux artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: linux
+
+      - name: Deploying windows artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: windows
+      
+      - name: Packaging bin/dbg
+        id: packaging-job
+        if: |
+          github.event_name == 'release' &&
+          github.event.action == 'published' &&
+          startsWith(github.ref, 'refs/tags/')
+        run: |
+          7z a -tzip voice_utils-bin-$RELEASE_VERSION.zip bin/Release scripting/
+        
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: voice_utils-bin-$RELEASE_VERSION.zip
