--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,10 +36,7 @@ jobs:
       name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
-      run: cmake -E make_directory ${{github.workspace}}/build/win32-msvc-xp-static-ipo.cmake
-
-    - name: Install Ninja
-      run: choco install ninja
+      run: cmake -E make_directory ${{github.workspace}}/build
       
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
@@ -49,7 +46,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release
+      run: cmake .. -A Win32 -DCMAKE_BUILD_TYPE=Release
 
     - name: Build
       working-directory: ${{github.workspace}}/build
@@ -61,7 +58,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: windows
-        path: ${{github.workspace}}/bin/Release/voice_utils_amxx.dll
+        path: ${{github.workspace}}/bin/Release/Release/voice_utils_amxx.dll
   publish:
     name: 'Publish'
     runs-on: ubuntu-latest
