--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,26 +33,24 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     -
+      name: Install ninja
+      run: choco install ninja
+    -
       name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
       run: cmake -E make_directory ${{github.workspace}}/build
       
     - name: Configure CMake
-      # Use a bash shell so we can use the same syntax for environment variable
-      # access regardless of the host operating system
       shell: bash
-      working-directory: ${{github.workspace}}/build
-      # Note the current convention is to use the -S and -B options here to specify source 
-      # and build directories, but this is only available with CMake 3.13 and higher.  
-      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake .. -A Win32 -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../cmake/win32-msvc-xp-static-ipo.cmake
+      working-directory: ${{github.workspace}}
+      run: cmake -b build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../cmake/win32-msvc-xp-static-ipo.cmake
 
     - name: Build
-      working-directory: ${{github.workspace}}/build
+      working-directory: ${{github.workspace}}
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build . --config Release --parallel
+      run: cmake --build build --config Release --parallel
               
     - name: Deploy artifacts
       uses: actions/upload-artifact@v2
