--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,17 +34,12 @@ jobs:
     - uses: actions/checkout@v2
     -
       name: Install ninja
-      run: choco install ninja
-    -
-      name: Create Build Environment
-      # Some projects don't allow in-source building, so create a separate build directory
-      # We'll use this as our working directory for all subsequent commands
-      run: cmake -E make_directory ${{github.workspace}}/build
+      run: choco install ninja      
       
     - name: Configure CMake
       shell: bash
       working-directory: ${{github.workspace}}
-      run: cmake -b build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../cmake/win32-msvc-xp-static-ipo.cmake
+      run: cmake -B build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=cmake/win32-msvc-xp-static-ipo.cmake
 
     - name: Build
       working-directory: ${{github.workspace}}
