--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,6 +33,9 @@ jobs:
       name: Install ninja
       run: choco install ninja      
       
+    - name: setup devcmd
+      uses: ilammy/msvc-dev-cmd@v1
+      
     - name: Configure CMake
       working-directory: ${{github.workspace}}
       run: cmake -B build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE="cmake/win32-msvc-xp-static-ipo.cmake"
