--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,16 +7,24 @@ jobs:
     runs-on: ubuntu-latest
     container: s1lentq/linux86buildtools:latest
     
-    env:
-      CMAKE_TOOLCHAIN_FILE: ${{github.workspace}}/cmake/linux-i686.cmake
-
     steps:
+    
+    - name: Install dependencies
+      run: |
+        apt-get update
+        apt-get install -y  git gcc-multilib g++-multilib ninja-build cmake
+
     - uses: actions/checkout@v4
+  
+    - name: Create Build Environment    
+      run: git config --system --add safe.directory '*' # Workaround for github actions with custom container
+            
     - name: Configure CMake
-      # Note the current convention is to use the -S and -B options here to specify source 
-      # and build directories, but this is only available with CMake 3.13 and higher.  
-      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run:  rm -rf build && CC=icc CXX=icpc cmake -B build -DCMAKE_TOOLCHAIN_FILE=cmake/linux-i686.cmake && cmake --build build -j 
+      run: cmake -B build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=cmake/linux-i686.cmake
+      
+    - name: Build
+      # Execute the build.  You can specify a specific target with "--target <NAME>"
+      run: cmake --build build --config Release --parallel
 
     - name: Deploy artifacts
       uses: actions/upload-artifact@v4
